@@ -3,7 +3,9 @@ Revision history for {{$DIST}}
 {{$NEXT}}
  [BUG FIXES]
  - 'prepare_serializer_for_format' was clobbering the default serializer.
-   (RT#93478, reported by Pierre Vigier)
+   (RT#93478, reported by Pierre Vigier, fix by Yanick Champoux)
+ - serializer not detected in time for first deserialization. 
+    (RT#78437, reported by Andrew Solomon, fix by Yanick Champoux)
 
 0.07 2011-11-01
  - Minor updates to fix warnings with Dancer 1.3080
